--- a/science/physical-science/physics/e-equals-mc-squared/e-equals-mc-squared.tex
+++ b/science/physical-science/physics/e-equals-mc-squared/e-equals-mc-squared.tex
@@ -6,10 +6,8 @@
 \Large
 % \boldmath
 
-    $$
-    \mathit { % mathrm, mathit, mathbf, mathcal, mathnormal
+    \[\mathit {
         E=mc^2
-    }
-    $$
+    }\]
 
 \end{document}
