adding jk flip flip pulse triggered

--- a/mathematics/applied/electrical-engineering/sequential-logic/d-flip-flop-pulse-triggered/d-flip-flop-pulse-triggered.tex
+++ b/mathematics/applied/electrical-engineering/sequential-logic/d-flip-flop-pulse-triggered/d-flip-flop-pulse-triggered.tex
@@ -309,7 +309,7 @@
 
         % DRAW DOTTED LINE BOX AROUND D FLIP-FLOP POS EDGE
         \draw[thick, dashed, orange] ($(NAND7IN1) + (-6.4, 2.7)$) rectangle ($(NAND2OUT) + (3.1, -3.5)$);
-        \node[orange] at ($(NAND1) + (2.3, 2.7)$) {\normalsize D FLIP-FLOP POS EDGE};
+        \node[orange] at ($(NAND1) + (1.7, 2.7)$) {\normalsize D FLIP-FLOP PULSE-TRIGGERED};
         
     \end{tikzpicture}
 }
